<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestLibMuseAndroid</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts" translatable="false">Blinks, Jaw: </string>
    <string name="msg_count" translatable="false">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop" translatable="false">Drop</string>
    <string name="muse_elem" translatable="false">Alpha relative:</string>

    <string name="permission_dialog_title">Muse Needs Your Permission</string>
    <string name="permission_dialog_description" translatable="false">Muse needs a few permissions to work properly. On the next screens, tap "Allow" to proceed. If you deny, Muse will not work properly until you go into your Android settings and allow.</string>
    <string name="permission_dialog_understand">I Understand</string>
</resources>
