<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
	    android:id="@+id/muses_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="60dp" />
<!--	显示连接设备-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh" />
	    <Button
	        android:id="@+id/connect"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:text="@string/connect" />
	    <Button
	        android:id="@+id/disconnect"
	        android:layout_width="120dp"
	        android:layout_height="40dp"
	        android:text="@string/disconnect" />
	</LinearLayout>
<!--	刷新连接断开三个按钮-->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="100dp">
		<TextView
		android:layout_width="100dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:textSize="16sp"
		android:text="@string/status" />
		<TextView
		android:id="@+id/con_status"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:textSize="16sp"
		android:text="@string/undefined" />
	</LinearLayout>
<!--	显示连接状态-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/eeg" />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

		<TextView
			android:id="@+id/eeg_tp9"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/init_val"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/eeg_af7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/init_val"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/eeg_af8"
			android:layout_width="match_parent"
			android:layout_height="20dp"
			android:layout_weight="1"
			android:text="@string/init_val"
			android:textSize="16sp" />
        <TextView
            android:id="@+id/eeg_tp10"
	        android:layout_width="match_parent"
	        android:layout_height="20dp"
	        android:layout_weight="1"
	        android:textSize="16sp"
	        android:text="@string/init_val" />
    </LinearLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:text="@string/version"
		android:textSize="16sp" />

	<TextView
   	        android:id="@+id/version"
	   		android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:textSize="16sp"
	    	android:text="@string/undefined" />
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:orientation="horizontal" >
	        <Button
	            android:id="@+id/pause"
	            android:layout_width="150dp"
	            android:layout_height="40dp"
	            android:text="@string/pause" />
		<Button
			android:id="@+id/ble_image_receive"
			android:layout_width="150dp"
			android:layout_height="40dp"
			android:text="BLE Image" />
		</LinearLayout>

</LinearLayout>